--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PM6VTWT"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+  <script>
+window.dataLayer = window.dataLayer ||[];
+window.dataLayer.push({
+  'event': 'login',
+  'loginMethod' : 'email' 
+  
+});</script>
 
 <h2>HTML Forms</h2>
 
