--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      dataLayer.push({
+        'event' : 'view_item_list',
+         item_id: "ITM_12345",
+
+      'item_name': "Python",
+
+      'affiliation': "online_Course",
+
+     'currency': "INR",
+
+      'discount': 100,
+
+      'item_brand': "MOOC",
+
+      'item_category': "Python",
+
+      'item_category2': "ML",
+
+      'item_category3': "DS",
+
+      'item_category4': "CS",
+
+      'item_variant': "Online",
+
+      'location_id': "ChIJIQBpAG2ahYAR_6128GcTUEo",
+
+      'price': 5000,
+
+      'quantity': 1  
+      })
+      </script>
+    
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -9,6 +43,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-PM6VTWT');</script>
 <!-- End Google Tag Manager -->
   </head>
+  
+  
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PM6VTWT"
