--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@ window.dataLayer.push({
   'loginMethod' : 'email' 
   
 });</script>
+  
+  
+  <button id='btn'>
+    push data
+  </button>
 
 <h2>HTML Forms</h2>
 
