--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ window.dataLayer.push({
 src="https://www.youtube.com/embed/il_t1WVLNxk"&gt;>
 
 </iframe>
-  </br>
+  </body>
+  <body>
   <div>This is where the purchase form would go</div>
     <button id="purchase">Purchase</button>
     <script>
