--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ window.dataLayer.push({
   <button id='btn'>
     push data
   </button>
+  
+  <button id='btn1">
+              view item even data
+              </button>
 
 <h2>HTML Forms</h2>
 
