--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ window.dataLayer.push({
     push data
   </button>
   
-  <button id='btn1">
+  <button id="btn1">
               view item even data
               </button>
 
