--- a/index.html
+++ b/index.html
@@ -4,34 +4,47 @@
     <script>
       window.dataLayer = window.dataLayer || [];
       dataLayer.push({
-        'event' : 'view_item_list',
-         item_id: "ITM_12345",
+  'event' : 'view_item_list',
+//          item_id: "ITM_12345",
 
-      'item_name': "Python",
+//       'item_name': "Python",
 
-      'affiliation': "online_Course",
+//       'affiliation': "online_Course",
 
-     'currency': "INR",
+//      'currency': "INR",
 
-      'discount': 100,
+//       'discount': 100,
 
-      'item_brand': "MOOC",
+//       'item_brand': "MOOC",
 
-      'item_category': "Python",
+//       'item_category': "Python",
 
-      'item_category2': "ML",
+//       'item_category2': "ML",
 
-      'item_category3': "DS",
+//       'item_category3': "DS",
 
-      'item_category4': "CS",
+//       'item_category4': "CS",
 
-      'item_variant': "Online",
+//       'item_variant': "Online",
 
-      'location_id': "ChIJIQBpAG2ahYAR_6128GcTUEo",
+//       'location_id': "ChIJIQBpAG2ahYAR_6128GcTUEo",
 
-      'price': 5000,
+//       'price': 5000,
 
-      'quantity': 1  
+//       'quantity': 1  
+        
+'transaction_id':'4',
+
+      'affiliation':'idk',
+
+      'value':'5000',
+
+      'tax':'1000',
+
+      'shipping':'200',
+
+      'currency':'rupees',
+'items':['item1':"book",'item2':"play",'item3':"food",'item4':"laptop",'item5':"mobile"]
       })
       </script>
     
